--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "express": "^4.21.1",
     "mongoose": "^8.8.0"
-  }
+  },
+  "description": ""
 }
